--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       with:
-        depth-fetch: 0
+        fetch-depth: 0
     - name: Setup Python
       uses: actions/setup-python@v2
       with:
@@ -65,7 +65,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          depth-fetch: 0
+          fetch-depth: 0
       - uses: actions/setup-python@v2
         name: Install Python
         with:
