--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -15,6 +15,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
+    - name: Install sndfile library
+      run: |
+        sudo apt-get install libsndfile1-dev
     - name: Install ruptures and dependecies
       run: |
         python -m pip install --upgrade pip
