--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -8,16 +8,13 @@ on:
 
 jobs:
   docs:
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.x
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Install sndfile library
-      run: |
-        sudo apt-get install libsndfile1-dev
     - name: Install ruptures and dependecies
       run: |
         python -m pip install --upgrade pip
