build: change extra_require
it is possible to call
pip install ruptures[dev,docs]

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,18 +48,17 @@ test =
     pytest
     pytest-cov
 dev =
+    pre-commit
+docs =
     jupyter
+    librosa
     matplotlib
     mkdocs
     mkdocs-macros-plugin
     mkdocs-material
     mkdocstrings
     mknotebooks
-    pre-commit
     pymdown-extensions
-    pytest
-    pytest-cov
-    librosa
 
 [build_ext]
 inplace=1
