--- a/setup.cfg
+++ b/setup.cfg
@@ -48,17 +48,17 @@ test =
     pytest
     pytest-cov
 dev =
+    pre-commit
+docs =
     jupyter
+    librosa
     matplotlib
     mkdocs
     mkdocs-macros-plugin
     mkdocs-material
     mkdocstrings
     mknotebooks
-    pre-commit
     pymdown-extensions
-    pytest
-    pytest-cov
 
 [build_ext]
 inplace=1
