--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -15,7 +15,7 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.8'
-    - name: Install sndfile library
+    - name: Install sndfile library # for librose, see https://github.com/deepcharles/ruptures/pull/121
       run: |
         apt-get install libsndfile1-dev
     - name: Install ruptures and dependecies
