--- a/.github/workflows/publish-doc-to-remote.yml
+++ b/.github/workflows/publish-doc-to-remote.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: '3.8'
     - name: Install sndfile library # for librose, see https://github.com/deepcharles/ruptures/pull/121
       run: |
-        apt-get install libsndfile1-dev
+        sudo apt-get install libsndfile1-dev
     - name: Install ruptures and dependecies
       run: |
         python -m pip install --upgrade pip
