--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -13,6 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
+        max-parallel: 2
         python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-latest, windows-latest, macos-latest]
         exclude:
