--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,6 +1,3 @@
-# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
-
 name: Run tests
 
 on:
@@ -10,12 +7,15 @@ on:
     branches: [ master ]
 
 jobs:
-  test-ubuntu:
+  build:
     strategy:
-      max-parallel: 2
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
-    runs-on: ubuntu-latest
+        os: [ubuntu-latest, windows-latest, macos-latest]
+        exclude:
+          - os: windows-latest
+            python-version: 3.9
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
@@ -24,47 +24,6 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install ruptures
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install .[test]
-    - name: Test with pytest
-      run: |
-        python -m pytest
-
-  test-macos:
-    strategy:
-      max-parallel: 2
-      matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9]
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install ruptures
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install .[test]
-    - name: Test with pytest
-      run: |
-        python -m pytest
-
-  test-windows:
-    strategy:
-      max-parallel: 2
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install ruptures
-      run: |
-        python -m pip install --upgrade pip
         python -m pip install .[test]
     - name: Test with pytest
       run: |
