--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,3 +1,6 @@
+# This workflow will install Python dependencies, run tests and lint with a variety of Python versions
+# For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
+
 name: Run tests
 
 on:
@@ -24,6 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install ruptures
       run: |
+        python -m pip install --upgrade pip
         python -m pip install .[test]
     - name: Test with pytest
       run: |
