--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,6 +80,7 @@ nav:
       - 'Introduction': examples/advanced-usages-introduction.md
       - 'Kernel change point detection: a performance comparison': examples/kernel-cpd-performance-comparison.ipynb
       - 'Music segmentation': examples/music-segmentation.ipynb
+      - 'Text segmentation': examples/text-segmentation.ipynb
   - Code reference:
       - Introduction: code-reference/index.md
       - Base classes: code-reference/base-reference.md
