build: pin mkdocs version

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ docs =
     jupyter
     librosa
     matplotlib
-    mkdocs
+    mkdocs==1.1.2
     mkdocs-macros-plugin
     mkdocs-material
     mkdocstrings
