--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -69,3 +69,7 @@ labels:
     include:
       - '^revert(\(.*\))?:(.*)'
     exclude: []
+  'skip-changelog':
+    include:
+      - '^(chore: pre-commit autoupdate)'
+    exclude: []
