build: add nltk dependency to run docs examples (#168)
* chore:add nltk dependency to run docs examples

* chore: add livereload dependency. Not sure if this is an error on mkdocs side

* build: remove livereload dependency

* build: pin mkdocs version

Co-authored-by: Charles T <charles@doffy.net>

--- a/setup.cfg
+++ b/setup.cfg
@@ -53,12 +53,13 @@ docs =
     jupyter
     librosa
     matplotlib
-    mkdocs
+    mkdocs==1.1.2
     mkdocs-macros-plugin
     mkdocs-material
     mkdocstrings
     mknotebooks
     pymdown-extensions
+    nltk
 
 [build_ext]
 inplace=1
