ci(changelog): add ci in Maintenance section

--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -15,6 +15,7 @@ categories:
       - 'Type: Maintenance'
       - 'Type: Build'
       - 'Type: Refactoring'
+      - 'Type: CI'
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
