--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -10,9 +10,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    types: [labeled]
 
 jobs:
   coverage:
+    if: ${{ github.event.label.name != 'skip-changelog' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
