--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -8,9 +8,11 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    types: [labeled]
 
 jobs:
   build:
+    if: ${{ github.event.label.name != 'skip-changelog' }}
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
