--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -22,9 +22,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
     - name: To be deleted - print pr name
+      env:
+        GH_EVENT_CONTEXT_PR = ${{ toJson(github.event.pull_request) }}
       run: |
-        array = ${{github.event.pull_request}}
-        echo "${array[*]}"
+        echo "$GH_EVENT_CONTEXT_PR"
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
