--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -2,10 +2,11 @@ name: "Check docs"
 on:
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '.pre-commit-config.yaml'
 
 jobs:
   docs:
-    if: ${{ github.event.label.name != 'skip-changelog' }}
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
