ci: do not triggers some gh actions for pre-commit-ci-update-config branch (#186)
* Do not triggers given GH Actions for PR labelled as skip-changelog

* remove condition on types label

* test retrieving PR name

* typo

* syntax

* looking for info in github.event.pull_request

* still looking for info in github.event.pull_request

* still looking for info in github.event.pull_request

* testing condition on title with contains

* using paths-ignore

--- a/.github/workflows/check-docs.yml
+++ b/.github/workflows/check-docs.yml
@@ -1,6 +1,9 @@
 name: "Check docs"
 on:
-- pull_request
+  pull_request:
+    branches: [ master ]
+    paths-ignore:
+      - '.pre-commit-config.yaml'
 
 jobs:
   docs:
