--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -8,6 +8,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+    paths-ignore:
+      - '.pre-commit-config.yaml'
 
 jobs:
   build:
