--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -33,4 +33,4 @@ jobs:
         python -m pip install .[test]
     - name: Test with pytest
       run: |
-        python -m pytest
+        python -m pytest --no-cov
