--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -29,7 +29,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install ruptures
       run: |
-        python -m pip install pip==21.0.1
+        python -m pip install --upgrade pip
         python -m pip install .[test]
     - name: Test with pytest
       run: |
