docs: adding mkdocs dependency

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ docs =
     mkdocs==1.1.2
     mkdocs-macros-plugin
     mkdocs-material
+    mkdocs-section-index
     mkdocstrings
     mknotebooks
     pymdown-extensions
