build: do not run tests when modifying the docs

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -11,6 +11,9 @@ on:
     paths-ignore:
       - '.pre-commit-config.yaml'
       - 'docs/**'
+      - 'images/**'
+      - '**.md'
+      - 'mkdocs.yml'
 
 jobs:
   build:
