build: do not run tests when modifying the docs (#217)
* build: do not run tests when modifying the docs

* build: path-ignore docs modification

* style: removing blank line

--- a/.github/workflows/run-test-coverage.yml
+++ b/.github/workflows/run-test-coverage.yml
@@ -13,6 +13,9 @@ on:
     paths-ignore:
       - '.pre-commit-config.yaml'
       - 'docs/**'
+      - 'images/**'
+      - '**.md'
+      - 'mkdocs.yml'
 
 jobs:
   coverage:
