--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -50,10 +50,13 @@ jobs:
         python -m pip install .[test]
     - name: Test with pytest
       run: |
-        python -m pytest
-    - name: Upload to Codecov
-      run: |
-        bash <(curl -s https://codecov.io/bash)
+        python -m pytest --cov-report=xml --cov-report=term:skip-covered --cov=src/ruptures
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        files: ./coverage.xml
+        flags: unittests
+        fail_ci_if_error: true
     - uses: actions/upload-artifact@v2
       with:
         path: coverage.xml
