--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Run tests
+name: Tests and coverage
 
 on:
   push:
@@ -16,14 +16,11 @@ on:
       - 'mkdocs.yml'
 
 jobs:
-  build:
+  tests:
     strategy:
       matrix:
         python-version: [3.6, 3.7, 3.8, 3.9]
         os: [ubuntu-latest, windows-latest, macos-latest]
-        exclude:
-          - os: windows-latest
-            python-version: 3.9
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
@@ -38,3 +35,28 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest --no-cov
+
+  coverage:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - name: Install ruptures
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install .[test]
+    - name: Test with pytest
+      run: |
+        python -m pytest --cov-report=xml --cov-report=term:skip-covered --cov=src/ruptures
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v2
+      with:
+        files: ./coverage.xml
+        flags: unittests
+        fail_ci_if_error: true
+    - uses: actions/upload-artifact@v2
+      with:
+        path: coverage.xml
