fix: make coverage work

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -50,7 +50,7 @@ jobs:
         python -m pip install .[test]
     - name: Test with pytest
       run: |
-        python -m pytest --cov-report=xml --cov-report=term:skip-covered --cov=src/ruptures
+        python -m pytest --cov
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v2
       with:
