ci(tests): add the display options.extras_requires so that in the CI matplotlib is installed and display tests not skipped

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -47,7 +47,7 @@ jobs:
     - name: Install ruptures
       run: |
         python -m pip install --upgrade pip
-        python -m pip install .[test]
+        python -m pip install .[test,display]
     - name: Test with pytest
       run: |
         python -m pytest --cov
