ci(upload-pypi): bump versions of gha and manage supported python versions (#356)
* ci(upload-pypi): upgrade version of artefact upload action

An error is thrown when uploading an artefact (`actions/upload-artifact`) because the version is too old

https://github.blog/changelog/2024-02-13-deprecation-notice-v1-and-v2-of-the-artifact-actions/

* ci(upload-to-pypi): correct mistakes on versions

* ci(upload-to-pypi): remove wheels for py36 and py37

* Give a name to each new artefact

* Update upload-to-pypi.yml

https://learn.scientific-python.org/development/guides/gha-wheels/

* prevent artifact name colision

* adding support for py314

* skipping py314t for win32

* bumping versions of various gha

* remove pp* from skip selector

Build wheels on ubuntu-latest
cibuildwheel: Invalid skip selector: 'pp*'. This selector matches a group that wasn't enabled. Enable it using the `enable` option or remove this selector. This selector will have no effect.

* only build wheels for python >= 3.8

* updater python version for cibuildwheel

Warning: cibuildwheel 3 will require Python 3.11+, please upgrade the Python version used to run cibuildwheel. This does not affect the versions you can target when building wheels. See: https://cibuildwheel.pypa.io/en/stable/#what-does-it-do

* upgrade python version to build dist

I mean, why not?

* only support python >= 3.9

because one wheel is bugging on python 3.8 and win amd64

* no wheel for py38

* bum versions of gha and remove python3.8 from tests

* bump python version and gha

* bump python version and gha versions

* adding py3.14 to the test

* only support up to python3.13

* Update README.md with supported python versions

* Update run-test.yml to remove py314

* Update setup.cfg (typo)

--- a/.github/workflows/upload-to-pypi.yml
+++ b/.github/workflows/upload-to-pypi.yml
@@ -6,10 +6,10 @@ on:
       overrideVersion:
         description: Manually force a version
       uploadToPyPI:
-          description: Upload to PyPI
-          required: false
-          default: false
-          type: boolean
+        description: Upload to PyPI
+        required: false
+        default: false
+        type: boolean
 
 env:
   CIBW_BUILD_VERBOSITY: 3
@@ -23,17 +23,18 @@ jobs:
     name: Make SDist
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
       - name: Setup Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v6
         with:
-          python-version: "3.10"
+          python-version: "3.13"
       - name: Install deps
         run: python -m pip install build twine
       - name: Build SDist
         run: python -m build --sdist
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: cibw-sdist
           path: dist/*.tar.gz
       - name: Check metadata
         run: twine check dist/*
@@ -45,11 +46,12 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
 
       # Used to host cibuildwheel
-      - uses: actions/setup-python@v2
-
+      - uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
 
@@ -57,14 +59,15 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           # Disable explicitly building PyPI wheels for specific configurations
-          CIBW_SKIP: pp* cp{38,39,310,311,312,313}-manylinux_i686 *-musllinux_* cp{38,39,310,311,312,313}-win32
+          CIBW_SKIP: cp{38,39,310,311,312,313,314}-manylinux_i686 *-musllinux_* cp{38,39,310,311,312,313,314,314t}-win32
           CIBW_PRERELEASE_PYTHONS: False
           # Manually force a version (and avoid building local wheels)
           CIBW_ENVIRONMENT: "SETUPTOOLS_SCM_PRETEND_VERSION=${{ github.event.inputs.overrideVersion }}"
           CIBW_ARCHS_MACOS: x86_64 arm64
 
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: cibw-wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: wheelhouse/*.whl
 
   build_aarch64_wheels:
@@ -72,16 +75,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python: [36, 37, 38, 39, 310, 311, 312, 313]
+        python: [39, 310, 311, 312, 313, 314]
         include:
           - os: ubuntu-latest
             arch: aarch64
             platform_id: manylinux_aarch64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v5
 
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+        uses: docker/setup-qemu-action@v3
 
       - name: Install cibuildwheel
         run: python -m pip install cibuildwheel
@@ -93,18 +96,20 @@ jobs:
           CIBW_BUILD: cp${{ matrix.python }}-${{ matrix.platform_id }}
           # Manually force a version (and avoid building local wheels)
           CIBW_ENVIRONMENT: "SETUPTOOLS_SCM_PRETEND_VERSION=${{ github.event.inputs.overrideVersion }}"
-      - uses: actions/upload-artifact@v2
+      - uses: actions/upload-artifact@v4
         with:
+          name: cibw-aarch64_wheels-${{ matrix.os }}-${{ strategy.job-index }}
           path: wheelhouse/*.whl
 
   upload_all:
     needs: [build_wheels, build_aarch64_wheels, make_sdist]
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v5
         with:
-          name: artifact
+          pattern: cibw-*
           path: dist
+          merge-multiple: true
       - name: Publish to PyPI
         if: ${{ github.event.inputs.uploadToPyPI == 'true' }}
         uses: pypa/gh-action-pypi-publish@release/v1
