--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ classifiers =
 [options]
 zip_safe = True
 include_package_data = True
-python_requires = >= 3.6
+python_requires = >=3.9, <3.14
 install_requires =
     numpy
     scipy
