ci: add codecov token secret

--- a/.github/workflows/run-test.yml
+++ b/.github/workflows/run-test.yml
@@ -59,6 +59,7 @@ jobs:
         files: ./coverage.xml
         flags: unittests
         fail_ci_if_error: true
+        token: ${{ secrets.CODECOV_TOKEN }}
     - uses: actions/upload-artifact@v4
       with:
         path: coverage.xml
